src/components/GlobalElements/Navigation/style.sass
.is-active
	&::before
		transform: rotate(-45deg) !important
		z-index: -1 !important

	&::after
		transform: rotate(45deg) !important
		z-index: -1 !important

.scrolled
	width: 0
	right: -100% !important

	.desktop__icons

		.bar__icon
			display: flex

.transformed
	width: 12vw !important
	right: 0 !important
	height: 100vh !important

	.navbar__list
		width: 100%
		padding: 0
		flex-direction: column !important

	.desktop__icons

	.bar__icon
		display: none !important

	.times__icon
		display: flex !important

.desktop__icons
	position: fixed
	top: 15px
	right: 25px
	width: 50px
	height: 50px

	.bar__icon, .times__icon
		position: absolute
		display: none
		width: 40px
		height: 10px
		cursor: pointer

	.bar__icon
		top: 20px
		left: 50%
		transform: translateX(-50%)

		&::before
			position: absolute
			content: ''
			top: 0
			right: 0
			width: 100%
			height: 1px
			background: $color--accent-gray

		&::after
			position: absolute
			content: ''
			bottom: 0
			right: 0
			width: 100%
			height: 1px
			background: $color--accent-gray

	.times__icon
		top: 0
		right: 0
		height: 40px !important

		&::before
			position: absolute
			content: ''
			top: 50%
			left: 0
			width: 70%
			height: 1px
			transform: rotateZ(45deg)
			background: $color--accent-gray

		&::after
			position: absolute
			content: ''
			top: 50%
			left: 0
			width: 70%
			height: 1px
			transform: rotateZ(-45deg)
			background: $color--accent-gray

.navbar
	position: fixed
	width: 100%
	height: 7em
	right: 0
	z-index: 1000
	display: flex
	background: transparent
	justify-content: center
	transition: all .3s ease
	border-bottom: 2px solid transparent

	&__list
		display: flex
		width: 60%
		justify-content: space-evenly
		align-items: center

	&__item
		position: relative
		font-size: 1.5rem
		text-transform: uppercase
		letter-spacing: 2px

		a
			font-family: $font--default
			position: relative
			display: inline-block
			padding: 15px 0
			width: 100%
			height: 100%

			&::before
				position: absolute
				content: ''
				bottom: 10px
				left: 0
				width: 0
				height: 1px
				background: $color--accent-gray
				transition: all .3s ease

			&:hover::before
				width: 100%

.hiddenIcon
	display: none

.visibleIcon
	display: inline-block !important

.mobile-visible
	width: 100% !important
	left: 0 !important
	//height: 100vh !important

	.logo
		top: 4% !important

	.navbar__list
		position: relative
		display: flex
		padding: 0
		height: 100%

.mobile__nav-icons
	display: none

@media screen and (min-width: 320px) and (max-width: 980px)
	.mobile__nav-icons
		position: absolute
		height: 25px
		display: flex
		left: 90%
		z-index: 501

		i
			position: relative
			top: 90%
			font-size: 2.5rem
			cursor: pointer

		.fa-times
			display: none

	.navbar
		position: fixed
		width: 100%
		top: 0
		left: 0

		&__list
			width: 100%
			display: none
			flex-direction: column

